[gd_scene load_steps=7 format=3 uid="uid://cmd31gkmh8d6b"]

[ext_resource type="Script" path="res://character/player.gd" id="1_7io2i"]
[ext_resource type="Script" path="res://character/script/state_machine.gd" id="2_wc3me"]
[ext_resource type="Script" path="res://character/script/idle_state.gd" id="3_xxtxq"]
[ext_resource type="Script" path="res://character/script/fall_state.gd" id="4_7dnul"]
[ext_resource type="Script" path="res://character/script/jump_state.gd" id="4_ryu0b"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_312w2"]

[node name="player" type="Node3D"]

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
script = ExtResource("1_7io2i")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
shape = SubResource("CapsuleShape3D_312w2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CharacterBody3D"]
skeleton = NodePath("")

[node name="TwistPivot" type="Node3D" parent="CharacterBody3D"]

[node name="PitchPivot" type="Node3D" parent="CharacterBody3D/TwistPivot"]

[node name="Camera3D" type="Camera3D" parent="CharacterBody3D/TwistPivot/PitchPivot"]

[node name="state_machine" type="Node" parent="CharacterBody3D"]
script = ExtResource("2_wc3me")

[node name="idle_state" type="Node" parent="CharacterBody3D/state_machine"]
script = ExtResource("3_xxtxq")

[node name="fall_state" type="Node" parent="CharacterBody3D/state_machine"]
script = ExtResource("4_7dnul")

[node name="jump_state" type="Node" parent="CharacterBody3D/state_machine"]
script = ExtResource("4_ryu0b")

[node name="slide_state" type="Node" parent="CharacterBody3D/state_machine"]
