extends State

@export
var idle_state: State
@export
var jump_state: State
@export
var move_state: State
@export
var slide_state: State


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
